[workspace]
members = [
  ".",
  "examples/*",
]

[package]
name = "leptos_sse"
version = "0.1.2"
edition = "2021"
description = "Leptos server signals synced through server-sent-events (SSE)"
repository = "https://github.com/messense/leptos_sse"
license = "MIT"
keywords = ["leptos", "server", "signal", "sse"]
categories = [
  "wasm",
  "web-programming",
  "web-programming::http-client",
  "web-programming::http-server",
]

[dependencies]
cfg-if = "1"
js-sys = "0.3.61"
json-patch = "1.0.0"
leptos = { version = "0.5.0-rc1", default-features = false }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2.84", default-features = false }
web-sys = { version = "0.3.61", features = ["EventSource", "MessageEvent"] }
pin-project-lite = "0.2.12"
tokio = { version = "1.32.0", optional = true }
tokio-stream = { version = "0.1.14", optional = true }

# Actix
actix-web-lab = { version = "0.19.0", optional = true }

# Axum
axum = { version = "0.6.18", default-features = false, features = ["tokio", "json"], optional = true }
futures = { version = "0.3.28", default-features = false, optional = true }

[features]
default = []
ssr = []
actix = ["dep:actix-web-lab", "dep:futures", "dep:tokio", "dep:tokio-stream"]
axum = ["dep:axum", "dep:futures", "dep:tokio", "dep:tokio-stream"]

[package.metadata.docs.rs]
features = ["axum", "ssr"]
rustdoc-args = ["--cfg", "docsrs"]
